# quartermaster

./: .env  .gitignore  README.md  api_test.http  create_user.http  docker-compose.yml  member_schema.http
backend/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  api_test.http  docker-entrypoint.sh  lifetime_function.py  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  db_schemas.py  enums.py  search_engine.py  utils.py
backend/app/api/: auth.py  contract.py  contracts.py  events.py  instructors.py  member.py  member_instructor.py  memberships.py  money.py  public_attendance.py  router.py  shelf.py  statistics.py  training.py  user.py
backend/app/auth/: dependancies.py  role_check.py  tokens.py
backend/app/common/: route_generator.py  ui_schema.py
backend/app/models/: __init__.py  contract.py  event.py  field_description.py  hr.py  membership.py  money.py  shelf.py  training.py
backend/app/schemas/: contract.py  event.py  hr.py  membership.py  public_attendance.py  shelf.py  statistics.py  training.py
backend/fixture_data/: auth.py  upload_all_data.py  upload_expenses.py  upload_shelf_instructors.py  upload_test_members_300.py
backend/migrations/: env.py
backend/migrations/versions/: 6daf726dd29d_initial_migration.py  89bc42efc5ba_attendance_missing_fields_and_non_null_.py  8e4a7c2c1f6b_add_field_description_table.py  9f0b4c2d1e6a_add_field_display_metadata.py  a4d9f2b7c1e8_add_member_training_start_date_month_field.py  (+9 more)
backend/scripts/: create_missing_training_sessions.py  import_shelf_rentals_csv.py
(+90 files in other folders)
