[project]
name = "quartermaster-system-backend"
version = "1.0.0"
description = "Backend API for managing a HEMA gym."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi[standard]==0.119.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "pydantic[email]==2.12.0",
    "pydantic_core==2.41.1",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.3",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.37.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "strawberry-graphql[fastapi]==0.284.1",
    "apscheduler==3.11.2",
    "pymysql==1.1.1",
    "alembic==1.14.0",
    "sqlalchemy[pymysql]>=2.0.46",
    "python-dateutil==2.9.0",
    "pandas>=2.2.3",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "cachetools==6.2.4",
    "requests==2.32.5",
    "pandas-stubs~=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
include = ["app*", "fixture_data*"]
